--- a/app/views/settings/_settings.rhtml
+++ b/app/views/settings/_settings.rhtml
@@ -23,3 +23,10 @@
   <br />
   <%= content_tag(:span, l(:kanbanery_settings_label_token_help)) %>
 </p>
+
+<p>
+  <%= content_tag(:label, l(:kanbanery_settings_label_closed_status)) %>
+  <%= text_field_tag("settings[closed_status_name]", @settings['closed_status_name']) %>
+  <br />
+  <%= content_tag(:span, l(:kanbanery_settings_label_closed_status)) %>
+</p>
